force-app/main/default/objects/Service_Request__c/fields/Send_Email_to_Store_Manager__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_Store_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used in workflow to send email to store manager.</description>
    <label>Send Email to Store Manager</label>
    <type>Checkbox</type>
</CustomField>