force-app/main/default/objects/Service_Request__c/fields/Service_Invoice_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Submitted_Date__c</fullName>
    <label>Service Invoice Submitted Date</label>
    <type>Date</type>
</CustomField>