force-app/main/default/objects/Service_Request__c/fields/Service_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Manager_Email__c</fullName>
    <label>Service Manager Email</label>
    <type>Email</type>
</CustomField>