force-app/main/default/objects/Service_Request__c/fields/Service_Visit_History__c.field-meta.xml
<CustomField>
    <fullName>Service_Visit_History__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Report/00O2u000000mD1uEAE/view?fv0=&apos;+Name, &quot;Service Visit&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Visit History</label>
    <type>Text</type>
</CustomField>