force-app/main/default/objects/Service_Request__c/fields/showServiceReqCMP__c.field-meta.xml
<CustomField>
    <fullName>showServiceReqCMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>showServiceReqCMP</label>
    <type>Checkbox</type>
</CustomField>