force-app/main/default/objects/Service_Request__c/fields/Submit_Part_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_Part_Approval__c</fullName>
    <label>Submit Part Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>