force-app/main/default/objects/Service_Request__c/fields/TAT_Hours__c.field-meta.xml
<CustomField>
    <fullName>TAT_Hours__c</fullName>
    <formula>If(text(Failure_Category__c)=&apos;A-48&apos;, &apos;48&apos;, if(text(Failure_Category__c)=&apos;B-240&apos;, &apos;240&apos;, if(text(Failure_Category__c)=&apos;C-No Time Limit&apos;, &apos;&apos;, &apos;0&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT Hours</label>
    <type>Text</type>
</CustomField>