force-app/main/default/objects/Service_Request__c/fields/TAT_Remaining__c.field-meta.xml
<CustomField>
    <fullName>TAT_Remaining__c</fullName>
    <formula>VALUE( TAT_Hours__c )*60 - if(Text(Status__c) =&apos;Closed&apos;, (Closed_Date_Time__c -  Date_Time_Reported__c)*24*60 - On_Hold_Hours__c, (NOW()-  Date_Time_Reported__c)*24*60 - On_Hold_Hours__c - if(Text(Status__c) =&apos;On Hold&apos; , (NOW()-  DateTimeCalculation__c)*24*60 - On_Hold_Hours__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>