force-app/main/default/objects/Service_Request__c/fields/Time_Attended__c.field-meta.xml
<CustomField>
    <fullName>Time_Attended__c</fullName>
    <formula>TIMEVALUE( Visit_ReportedTime__c + (11/48))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Attended</label>
    <type>Time</type>
</CustomField>