force-app/main/default/objects/Service_Request__c/fields/Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Time_Closed__c</fullName>
    <formula>TIMEVALUE( Closed_Date_Time__c + (11/48))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Closed</label>
    <type>Time</type>
</CustomField>