force-app/main/default/objects/Service_Request__c/fields/Time_Elapsed_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed_Resolution_Time__c</fullName>
    <formula>TEXT(FLOOR(Resolution_Time__c / 60))
&amp;&apos;hr&apos;&amp;
TEXT(ROUND(MOD(Resolution_Time__c ,60), 0))
&amp;&apos;min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Elapsed / Resolution Time</label>
    <type>Text</type>
</CustomField>