force-app/main/default/objects/Service_Request__c/fields/Time_Reported__c.field-meta.xml
<CustomField>
    <fullName>Time_Reported__c</fullName>
    <formula>TIMEVALUE( Date_Time_Reported__c + (11/48))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Reported</label>
    <type>Time</type>
</CustomField>