force-app/main/default/objects/Service_Request__c/fields/Visit_ReportedTime__c.field-meta.xml
<CustomField>
    <fullName>Visit_ReportedTime__c</fullName>
    <label>Visit ReportedTime</label>
    <type>DateTime</type>
</CustomField>