force-app/main/default/objects/Service_Request__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <formula>Text(ESN__r.Under_Warranty__c)</formula>
    <label>Warranty Status</label>
    <type>Text</type>
</CustomField>