force-app/main/default/objects/Service_Request__c/fields/Work_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Completion_Time__c</fullName>
    <label>Work Completion Time</label>
    <type>DateTime</type>
</CustomField>