force-app/main/default/objects/Service_Request__c/fields/Work_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Start_Time__c</fullName>
    <label>Work Start Time</label>
    <type>DateTime</type>
</CustomField>