force-app/main/default/objects/Service_Request__c/validationRules/Attended_Date_greater_than_Reported_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Attended_Date_greater_than_Reported_Date</fullName>
    <active>true</active>
    <description>Attended date should be greater then Reported date.</description>
    <errorConditionFormula>Date_Time_Attended__c &lt; Date_Time_Reported__c</errorConditionFormula>
    <errorDisplayField>Date_Time_Attended__c</errorDisplayField>
    <errorMessage>Attended date should be greater then Reported date.</errorMessage>
</ValidationRule>