force-app/main/default/objects/Service_Request__c/validationRules/Closed_Status_not_to_update.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Status_not_to_update</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;  text(PRIORVALUE(Status__c))= &apos;Closed&apos; &amp;&amp; $Profile.Name != &apos;System Admin&apos;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Service Request has been closed. Please contact to System Administrator.</errorMessage>
</ValidationRule>