force-app/main/default/objects/Service_Request__c/validationRules/Is_Known_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Known_Issue</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Known_Issue__c, &apos;Yes&apos;) &amp;&amp; ISBLANK(TEXT( Issues__c))</errorConditionFormula>
    <errorDisplayField>Issues__c</errorDisplayField>
    <errorMessage>Please select an Issue.</errorMessage>
</ValidationRule>