force-app/main/default/objects/Service_Request__c/validationRules/Is_Manager_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Manager_Exist</fullName>
    <active>true</active>
    <description>Owner don&apos;t have a Manager.</description>
    <errorConditionFormula>IsBlank($User.ManagerId ) &amp;&amp; Is_Warranty_Claim__c</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Check the owner have a Manager.</errorMessage>
</ValidationRule>