force-app/main/default/objects/Service_Request__c/validationRules/Lock_Record_If_Status_is_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_If_Status_is_On_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISCHANGED( Status__c ) ) ,  ISPICKVAL(Status__c , &apos;On Hold&apos;) )</errorConditionFormula>
    <errorMessage>You Can&apos;t  update record.Status is On Hold.</errorMessage>
</ValidationRule>