force-app/main/default/objects/Service_Request__c/validationRules/Not_A_Know_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_A_Know_Issue</fullName>
    <active>true</active>
    <errorConditionFormula>text(Known_Issue__c) = &apos;New Issue&apos; &amp;&amp; Isblank( New_Issue__c )</errorConditionFormula>
    <errorDisplayField>New_Issue__c</errorDisplayField>
    <errorMessage>Please provide the issue details.</errorMessage>
</ValidationRule>