force-app/main/default/objects/Service_Request__c/validationRules/On_Hold_Status_Not_to_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Hold_Status_Not_to_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; text(Status__c) = &apos;Closed&apos; &amp;&amp;  Text(PRIORVALUE(Status__c))  =&apos;On Hold&apos;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please change your status to other value.</errorMessage>
</ValidationRule>