force-app/main/default/objects/Service_Request__c/validationRules/Parent_Service_Request_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Service_Request_Required</fullName>
    <active>true</active>
    <description>This will be useful when service request is re work and need to select  Parent Service Request</description>
    <errorConditionFormula>AND( Is_Rework__c , ISBLANK( Parent_Service_Request__c ))</errorConditionFormula>
    <errorDisplayField>Parent_Service_Request__c</errorDisplayField>
    <errorMessage>Please Select the Parent Service Request</errorMessage>
</ValidationRule>