force-app/main/default/objects/Service_Request__c/validationRules/Part_Request_should_be_greater_one.validationRule-meta.xml
<ValidationRule>
    <fullName>Part_Request_should_be_greater_one</fullName>
    <active>true</active>
    <errorConditionFormula>if(
	ISNULL(Part_Request_Count_Number__c),Send_Email_to_Store_Manager__c,
	AND
	(
		Part_Request_Count_Number__c &lt; 1, 
		Send_Email_to_Store_Manager__c 
	)
)</errorConditionFormula>
    <errorDisplayField>Send_Email_to_Store_Manager__c</errorDisplayField>
    <errorMessage>There are no Part Requested</errorMessage>
</ValidationRule>