force-app/main/default/objects/Service_Request__c/validationRules/Reason_For_Shifting.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_For_Shifting</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Failure_Category__c) &amp;&amp;  (PRIORVALUE(Reasons_for_shifting_the_category__c) = Reasons_for_shifting_the_category__c || isblank(Reasons_for_shifting_the_category__c))</errorConditionFormula>
    <errorMessage>Please fill the shifting reason.</errorMessage>
</ValidationRule>