force-app/main/default/objects/Service_Request__c/validationRules/Restrict_User_on_Closed_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_on_Closed_status</fullName>
    <active>true</active>
    <errorConditionFormula>($Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;System Admin&apos; &amp;&amp;  $Profile.Name != &apos;Guest License User&apos; &amp;&amp; $Profile.Name != &apos;PPL Service Report Profile&apos;)  &amp;&amp;  text(PRIORVALUE(Status__c)) ==&apos;Closed&apos;</errorConditionFormula>
    <errorMessage>The Service Request has been closed,Please contact with System Admin.</errorMessage>
</ValidationRule>