force-app/main/default/objects/Service_Request__c/validationRules/Service_Request_is_not_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Request_is_not_closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Warranty_Claim__c  , NOT(ISPICKVAL( Status__c , &apos;Closed&apos;)) )</errorConditionFormula>
    <errorDisplayField>Is_Warranty_Claim__c</errorDisplayField>
    <errorMessage>Service Request is Not Closed.</errorMessage>
</ValidationRule>