force-app/main/default/objects/Service_Request__c/validationRules/Service_Request_Status_On_Create_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Request_Status_On_Create_New</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  NOT(ISPICKVAL(Status__c, &apos;New&apos;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select New.</errorMessage>
</ValidationRule>