force-app/main/default/objects/Service_Request__c/validationRules/Status_is_Closed_You_can_not_Send_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_is_Closed_You_can_not_Send_Email</fullName>
    <active>true</active>
    <description>Status is Closed You can not Send Email to Store Manager</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c  , &apos;Closed&apos;),  (Send_Email_to_Store_Manager__c  == True))</errorConditionFormula>
    <errorMessage>Status is closed. You can&apos;t send email to Store Manager.</errorMessage>
</ValidationRule>