force-app/main/default/objects/Service_Request__c/validationRules/TransitionCategoryHappensOnlyOnce.validationRule-meta.xml
<ValidationRule>
    <fullName>TransitionCategoryHappensOnlyOnce</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( Category_Update__c ) ) &amp;&amp;  ISCHANGED( Failure_Category__c )</errorConditionFormula>
    <errorDisplayField>Failure_Category__c</errorDisplayField>
    <errorMessage>You can change Failure Category only once.</errorMessage>
</ValidationRule>