force-app/main/default/objects/Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Issue_Reported__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>ESN__c</columns>
    <columns>Engine_Model__c</columns>
    <columns>Closed_Date_Time__c</columns>
    <columns>Engine_Run_Hours__c</columns>
    <columns>Status__c</columns>
    <columns>Failure_Category__c</columns>
    <columns>Date_Time_Reported__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Engineers</group>
        <group>Management</group>
    </sharedTo>
</ListView>