force-app/main/default/objects/Service_Request__c/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>ESN__c</columns>
    <columns>Engine_Model__c</columns>
    <columns>Closed_Date_Time__c</columns>
    <columns>Engine_Run_Hours__c</columns>
    <columns>Status__c</columns>
    <columns>Failure_Category__c</columns>
    <columns>Date_Time_Reported__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Cases</label>
    <sharedTo>
        <group>Management</group>
    </sharedTo>
</ListView>