force-app/main/default/objects/Service_Request__c/listViews/All_Open_Cases_In_East.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases_In_East</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer_Name__c</columns>
    <columns>ESN__c</columns>
    <columns>Engine_Model__c</columns>
    <columns>Closed_Date_Time__c</columns>
    <columns>Engine_Run_Hours__c</columns>
    <columns>Status__c</columns>
    <columns>Failure_Category__c</columns>
    <columns>Date_Time_Reported__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>mukherjee,das,rout</value>
    </filters>
    <label>All Open Cases In East</label>
    <sharedTo>
        <group>East_Service_Team</group>
        <group>Management</group>
    </sharedTo>
</ListView>