force-app/main/default/objects/Service_Request__c/listViews/My_Service_Requests.listView-meta.xml
<ListView>
    <fullName>My_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Issue_Reported__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>ESN__c</columns>
    <columns>Engine_Model__c</columns>
    <columns>Closed_Date_Time__c</columns>
    <columns>Engine_Run_Hours__c</columns>
    <columns>Status__c</columns>
    <columns>Failure_Category__c</columns>
    <columns>Date_Time_Reported__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Service Requests</label>
</ListView>