force-app/main/default/objects/Service_Request__c/listViews/Warranty_claim_Queue_Service_Request.listView-meta.xml
<ListView>
    <fullName>Warranty_claim_Queue_Service_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Warranty claim Queue</label>
    <queue>Warranty_claim_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>