force-app/main/default/objects/Service_Request__c/listViews/Workshop_Jobs.listView-meta.xml
<ListView>
    <fullName>Workshop_Jobs</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Issue_Reported__c</columns>
    <columns>Customer__c</columns>
    <columns>Date_Time_Reported__c</columns>
    <columns>Engine_Model__c</columns>
    <columns>Failure_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Saini</value>
    </filters>
    <label>Workshop Jobs</label>
    <sharedTo>
        <group>Management</group>
        <group>Workshop_Jobs</group>
    </sharedTo>
</ListView>